# Impresora-Zebra-ZD888T-Picking-front

./: .env  .env.example  README.md
db/: create-app-role.sh  init.sql
docs/: API_CONTRACT.md  README_PICKING.md
host/print-agent/: agent.py  config.yaml
ops/: .env.example  docker-compose.yml
postman/: Picking.postman_collection.json  Picking.postman_environment.json
samples/env/: .env  README.md
services/picking-api/: Dockerfile  pyproject.toml
services/picking-api/app/: auth.py  errors.py  main.py  models.py  rbac.py  schemas.py  zpl.py
services/picking-api/app/routers/: audit.py  auth.py  doc_scan.py  import_abcxyz.py  moves.py  printing.py  stock.py
services/picking-api/app/tests/: test_moves.py
services/picking-api/tests/: test_auth.py
services/ui/: pyproject.toml
services/ui/app/: main.py
services/ui/app/static/: app.css  app.js
services/ui/app/templates/: [login,dashboard,import,inbound,outbound,transfer,count,print,audit].html  base.html  dashboard.html  login.html  print_labels.html
