[project]
name = "picking-api"
version = "0.1.0"
description = "API de picking para Zebra ZD888t"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "asyncpg",
  "alembic",
  "python-dotenv",
  "pydantic[email]",
  "passlib[bcrypt]",
  "python-jose[cryptography]",
  "openpyxl",
  "pandas",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
